# MedAssist

./: .env.hospital.example  .env.tee.example  .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/hospital_mcp/: __init__.py  config.py  server.py  sessions.py  tee_session_client.py
apps/tee_service/: __init__.py  config.py  inference.py  models.py  sessions.py  tee_session_server.py
docs/: mcp_csv_tee_design.md
models/: cardio-risk-v1.onnx  registry.json
scripts/: build_demo_onnx.py
shared/: __init__.py  secure_channel.py  transport.py
shared/attestation/: __init__.py  api.py  csv_attestation.py
shared/proto/: diagnosis.proto  diagnosis_pb2.py
shared/schemas/: __init__.py  model_input.py
tests/: model_fixtures.py  test_attestation_api.py  test_config_defaults.py  test_hospital_disconnects.py  test_hospital_mcp_http.py  test_inference.py  test_model_input.py  test_model_metadata.py  test_secure_channel.py  test_session_stores.py
